// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dispatch oracle — M9.3.0 characterisation net > a malformed action:-prefixed customId (parseActionCid → null) from a user with NO character → deferUpdate then silence, same as the WITH-character cross above — the parse now runs ahead of the router entirely (Finding 1, M9.3.2b review) 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:<choice> from a user with no character → plain ephemeral reply BEFORE the unconditional deferUpdate (DC-M9.3.3) 1`] = `
[
  {
    "arg": {
      "content": "You don't have a character. Type \`/join\` first.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:<choice> where beginChoice throws before any beat → notifyAdmin fires, the generic error paints via a plain reply (DC-M9.3.3) 1`] = `
[
  {
    "arg": {
      "content": "Something went wrong with your action. Try \`/action\` again.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:<choice> where resolveChoice returns null (session expired) → deferUpdate already fired, expired copy paints via webhook.editMessage, NOT editReply (DC-M9.3.3, DC-M9.3.5) 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
  {
    "arg": {
      "components": [],
      "content": "❌ Your action session expired. Try \`/action\` again.",
      "embeds": [],
    },
    "method": "webhook.editMessage",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:custom:modal where the resume returns zero options hits the resume-stale arm → deferReply then the Stale Action embed, no narration prefix (DC-M9.3.7) 1`] = `
[
  {
    "arg": {
      "flags": 64,
    },
    "method": "deferReply",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "The trail has gone cold.",
          "title": "⏳ Stale Action",
        },
      ],
    },
    "method": "editReply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:custom:modal with profane text AND no character → the profanity guard still wins; engine.getCharacter is never reached (DC-M9.3.9) 1`] = `
[
  {
    "arg": {
      "content": "❌ That action contains language the warden won't tolerate. Try something else.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:custom:modal with profane text → the profanity guard rejects it with a single plain ephemeral reply, no defer at all (DC-M9.3.2 — must stay byte-identical through the whole M9.3 slice; pairs with action-oracle's slash pass-through transcript, same filter/pattern/text) 1`] = `
[
  {
    "arg": {
      "content": "❌ That action contains language the warden won't tolerate. Try something else.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:dayjob:<n> from unsafe ground (not the job's own workplace) → the interpolated unsafe-ground warning, plain ephemeral reply, no defer (DC-M9.3.3) 1`] = `
[
  {
    "arg": {
      "content": "⚠️ **It's no place for honest work here.**
The Shadowfen Marsh is too dangerous — make for safer ground before you set to your trade.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:dayjob:<n> where beginDayJob throws before any beat → notifyAdmin fires, the error paints via webhook.editMessage with NO prior reply/deferReply/deferUpdate (DC-M9.3.3) 1`] = `
[
  {
    "arg": {
      "components": [],
      "content": "❌ **Could not act.**
boom (dayjob)",
      "embeds": [],
    },
    "method": "webhook.editMessage",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:dayjob:<n> with an out-of-range job index → 'Invalid job action.' plain ephemeral reply, no defer (DC-M9.3.3) 1`] = `
[
  {
    "arg": {
      "content": "Invalid job action.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > action:dayjob:<n> with no character → plain ephemeral reply, no defer (DC-M9.3.3) 1`] = `
[
  {
    "arg": {
      "content": "You don't have a character. Type \`/join\` first.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — M9.3.0 characterisation net > sleep:feedback:modal where the persist throws → the player still gets the normal confirmation reply, and notifyAdmin fires with the sleep-specific label (DC-M9.3.10) 1`] = `
[
  {
    "arg": {
      "content": "🙏 Thanks. The warden listens.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — customId branches > action: with a malformed customId (parseActionCid → null) still acks via deferUpdate 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
]
`;

exports[`dispatch oracle — customId branches > action:<choice> → handleActionChoice steps the action machine 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "**You:** Advance carefully

⏳ **Thinking…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "action:choice:0:0",
              "emoji": undefined,
              "label": "A",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "action:bail",
              "emoji": undefined,
              "label": "Fall back",
              "style": 4,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 14329120,
          "description": "> 🧭 **Quest:** Advance carefully

> A shadow shifts ahead. Press on?

**A.** Push forward ⬆️",
          "footer": {
            "icon_url": undefined,
            "text": "What do you do?",
          },
          "title": "🤔 Decision",
        },
      ],
    },
    "method": "webhook.editMessage",
  },
]
`;

exports[`dispatch oracle — customId branches > action:custom:modal → thinking screen then a decision 1`] = `
[
  {
    "arg": {
      "flags": 64,
    },
    "method": "deferReply",
  },
  {
    "arg": {
      "embeds": [
        {
          "color": 9807270,
          "description": "**You:** scout the northern ridge

⏳ **Thinking…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "action:choice:0:0",
              "emoji": undefined,
              "label": "A",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "action:choice:0:1",
              "emoji": undefined,
              "label": "B",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 14329120,
          "description": "> 🛡️ **Work:** Walk the rounds

> The gate creaks. What do you do?

**A.** 💪 Advance carefully
**B.** Charge ahead ⬆️",
          "footer": {
            "icon_url": undefined,
            "text": "What do you do?",
          },
          "title": "🤔 Decision",
        },
      ],
    },
    "method": "editReply",
  },
]
`;

exports[`dispatch oracle — customId branches > action:dayjob:<n> → the day-job work flow (commute + work decision) 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "⏳ **Starting…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "**You head to the Town Square.**  
⚡ -1 stamina

⏳ **Setting to work…**
_The warden tends the fire._",
          "title": "🚶 Daily Commute",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "action:choice:0:0",
              "emoji": undefined,
              "label": "A",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "action:choice:0:1",
              "emoji": undefined,
              "label": "B",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 14329120,
          "description": "> 🛡️ **Work:** Walk the rounds

> The gate creaks. What do you do?

**A.** 💪 Advance carefully
**B.** Charge ahead ⬆️",
          "footer": {
            "icon_url": undefined,
            "text": "What do you do?",
          },
          "title": "🤔 Decision",
        },
      ],
    },
    "method": "webhook.editMessage",
  },
]
`;

exports[`dispatch oracle — customId branches > action:dayjob:custom → opens the custom-action modal 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "action:custom:input",
              "label": "What do you want to do?",
              "max_length": 300,
              "placeholder": "e.g. scout the northern ridge",
              "required": true,
              "style": 1,
              "type": 4,
            },
          ],
          "type": 1,
        },
      ],
      "custom_id": "action:custom:modal",
      "title": "Custom Action",
    },
    "method": "showModal",
  },
]
`;

exports[`dispatch oracle — customId branches > join: routes to the wizard (name step renders the class picker) 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "join:choice:2:Warrior",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "⚔️",
              },
              "label": "Warrior",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "join:choice:2:Ranger",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "🏹",
              },
              "label": "Ranger",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "join:choice:2:Wizard",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "🔮",
              },
              "label": "Wizard",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "join:choice:2:Bard",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "🎵",
              },
              "label": "Bard",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "join:choice:2:Priest",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "✝️",
              },
              "label": "Priest",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "join:restart",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "🔄",
              },
              "label": "Start Over",
              "style": 4,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 14329120,
          "description": "📝 ~~Name~~ → **Rowan**
🛡️ **Class** ◀
🌱 Upbringing
🧬 Race
⚖️ Alignment
🔧 Day Job
🎒 Starting Kit

__**Class**__
⚔️ **Warrior**
> 💪+3 🧠-1
Blade and shield. Front line. The first in and the last out.

🏹 **Ranger**
> 💪+1 🧠+2 💬-1
Bow and beast. The wilds are home. You read tracks like others read letters.

🔮 **Wizard**
> 💪-2 📖+3
Arcane and ancient. The old words still work — if you dare speak them.

🎵 **Bard**
> 💪-1 📖+1 💬+2
Song and story. A well-told tale opens more doors than any key.

✝️ **Priest**
> 🧠+2 💬+1
Faith and flame. The old gods are quiet — but not gone.",
          "footer": {
            "icon_url": undefined,
            "text": "Step 2 of 7 — Class",
          },
          "thumbnail": {
            "url": "attachment://theoak.png",
          },
          "title": "⚔️  Forge Your Hero",
        },
      ],
      "files": [
        {
          "_attachment": "theoak.png",
        },
      ],
    },
    "method": "editReply",
  },
]
`;

exports[`dispatch oracle — customId branches > outcome:bug:<id> → opens the bug-report modal carrying the action id 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "outcome:bug:input",
              "label": "Describe the bug",
              "placeholder": "What went wrong?",
              "required": true,
              "style": 2,
              "type": 4,
            },
          ],
          "type": 1,
        },
      ],
      "custom_id": "outcome:bug:modal:42",
      "title": "Report a Bug",
    },
    "method": "showModal",
  },
]
`;

exports[`dispatch oracle — customId branches > outcome:bug:modal:<id> → bug noted reply + submitBug(actionId) 1`] = `
[
  {
    "arg": {
      "content": "🐛 Bug noted. The warden will investigate.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — customId branches > outcome:feedback:<id> → opens the feedback modal carrying the action id 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "outcome:feedback:input",
              "label": "Your thoughts for the warden",
              "placeholder": "What did you enjoy? What could be better?",
              "required": true,
              "style": 2,
              "type": 4,
            },
          ],
          "type": 1,
        },
      ],
      "custom_id": "outcome:feedback:modal:42",
      "title": "Share Feedback",
    },
    "method": "showModal",
  },
]
`;

exports[`dispatch oracle — customId branches > outcome:feedback:modal:<id> → thanks reply + submitFeedback(actionId) 1`] = `
[
  {
    "arg": {
      "content": "🙏 Thanks. The warden listens.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — customId branches > release:feedback → opens the request/feedback modal 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "release:feedback:input",
              "label": "What would you like to see, or tell us?",
              "placeholder": "A feature you'd love, or what you think of the latest update…",
              "required": true,
              "style": 2,
              "type": 4,
            },
          ],
          "type": 1,
        },
      ],
      "custom_id": "release:feedback:modal",
      "title": "Request / Feedback",
    },
    "method": "showModal",
  },
]
`;

exports[`dispatch oracle — customId branches > release:feedback:modal → thanks reply + submitFeedback 1`] = `
[
  {
    "arg": {
      "content": "🙏 Noted. The warden carries your words forward.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — customId branches > sleep:feedback → opens the feedback modal 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "sleep:feedback:input",
              "label": "Your thoughts for the warden",
              "placeholder": "What did you enjoy? What could be better?",
              "required": true,
              "style": 2,
              "type": 4,
            },
          ],
          "type": 1,
        },
      ],
      "custom_id": "sleep:feedback:modal",
      "title": "Share Feedback",
    },
    "method": "showModal",
  },
]
`;

exports[`dispatch oracle — customId branches > sleep:feedback:modal → thanks reply + submitFeedback 1`] = `
[
  {
    "arg": {
      "content": "🙏 Thanks. The warden listens.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — divine intervention (M9.1, DC-M9.3) > action:custom:modal → divine intervention paints the grey System embed, no broadcast 1`] = `
[
  {
    "arg": {
      "flags": 64,
    },
    "method": "deferReply",
  },
  {
    "arg": {
      "embeds": [
        {
          "color": 9807270,
          "description": "**You:** scout the northern ridge

⏳ **Thinking…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "The warden intervenes — your roll is refunded.",
          "title": "⚠️ System",
        },
      ],
    },
    "method": "editReply",
  },
]
`;

exports[`dispatch oracle — divine intervention (M9.1, DC-M9.3) > action:dayjob:<n> → divine intervention paints the grey System embed, no broadcast 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "⏳ **Starting…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "**You head to the Town Square.**  
⚡ -1 stamina

⏳ **Setting to work…**
_The warden tends the fire._",
          "title": "🚶 Daily Commute",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "The warden intervenes — your roll is refunded.",
          "title": "⚠️ System",
        },
      ],
    },
    "method": "webhook.editMessage",
  },
]
`;

exports[`dispatch oracle — nav: sub-branches > nav:<generic> (nav:hi) → renders the target screen with a nav bar 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "📍 🛡️ **The Warden's Oak** — Use \`look\` for the full scene.

⚔️  **Aldric** — Warrior",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "❤️ 10/10  ┃  ⚡ 10/10  ┃  🎲 3  ┃  💰 5",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "🛡️ **Town Guard — Town Square — Daily Work**

  🎯 **Drill with the watch** — You put your back into the training yard until your arms burn. Steady hands keep the watch alive.
  🔧 **Inspect the lockup** — You check the cells. One door's hinge has been worked loose — from the inside.
  📋 **Stand the gate** — You hold the gate, marking who comes and goes. A few faces you don't know, and one you wish you didn't.

📦 Press the **Action** button or type \`action <what you do>\` to start.",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — nav: sub-branches > nav:action → shows the day-job menu and stashes it 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "action:dayjob:0",
              "emoji": undefined,
              "label": "Drill with the watch",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "action:dayjob:1",
              "emoji": undefined,
              "label": "Inspect the lockup",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "action:dayjob:2",
              "emoji": undefined,
              "label": "Stand the gate",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "action:dayjob:custom",
              "emoji": undefined,
              "label": "Custom…",
              "style": 1,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 14329120,
          "description": "Pick a task to start:",
          "title": "🛡️ Town Guard — Daily Work",
        },
      ],
      "flags": 64,
    },
    "method": "reply",
  },
  {
    "arg": null,
    "method": "fetchReply",
  },
]
`;

exports[`dispatch oracle — nav: sub-branches > nav:sleep → a loading beat then the sleep result 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "🏕️ **Bedding down…**
_The warden tends the fire._",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "🏕️ **The Warden's Oak**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "The Oak's familiar boughs cradle you once more.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "The day turns when the world wills it — not when you do.

*The ember glows. The Oak stands watch. Rest, for now.*",
              "type": 10,
            },
          ],
          "type": 17,
        },
      ],
      "flags": 32832,
    },
    "method": "editReply",
  },
]
`;

exports[`dispatch oracle — resolved / outcome render path > action:<choice> → a step that resolves renders the outcome 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "**You:** Advance carefully

⏳ **Thinking…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "outcome:feedback:77",
              "emoji": {
                "name": "💬",
              },
              "label": "Feedback",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "outcome:bug:77",
              "emoji": {
                "name": "🐛",
              },
              "label": "Bug Report",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 3066993,
          "description": "📍 The Warden's Oak

🧭

\`\`\`
A quiet clearing under the oak.
\`\`\`

> 🧭 **Quest:** Walk the rounds

↪ **Advance carefully**

💪 🎲 14 + 3 = **17**  vs  11  →  ✅ **SUCCESS**

You crest the ridge and chart the valley below.

+ 🗺️ Ridge Map
\`⚡ 10/10 (-1)  ┃  🎲 3 (-1)\`",
          "title": "🧭 Scout",
        },
      ],
    },
    "method": "webhook.editMessage",
  },
]
`;

exports[`dispatch oracle — resolved / outcome render path > action:custom:modal → auto-finishes straight to an outcome render 1`] = `
[
  {
    "arg": {
      "flags": 64,
    },
    "method": "deferReply",
  },
  {
    "arg": {
      "embeds": [
        {
          "color": 9807270,
          "description": "**You:** scout the northern ridge

⏳ **Thinking…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "outcome:feedback:77",
              "emoji": {
                "name": "💬",
              },
              "label": "Feedback",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "outcome:bug:77",
              "emoji": {
                "name": "🐛",
              },
              "label": "Bug Report",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 3066993,
          "description": "📍 The Warden's Oak

🧭

\`\`\`
A quiet clearing under the oak.
\`\`\`

> 🧭 **Quest:** scout the northern ridge

💪 🎲 14 + 3 = **17**  vs  11  →  ✅ **SUCCESS**

You crest the ridge and chart the valley below.

+ 🗺️ Ridge Map
\`⚡ 10/10 (-1)  ┃  🎲 3 (-1)\`",
          "title": "🧭 Scout",
        },
      ],
    },
    "method": "editReply",
  },
]
`;

exports[`dispatch oracle — resolved / outcome render path > action:dayjob:<n> → the work flow resolves straight to an outcome render 1`] = `
[
  {
    "arg": null,
    "method": "deferUpdate",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "⏳ **Starting…**
_The warden tends the fire._",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [],
      "embeds": [
        {
          "color": 9807270,
          "description": "**You head to the Town Square.**  
⚡ -1 stamina

⏳ **Setting to work…**
_The warden tends the fire._",
          "title": "🚶 Daily Commute",
        },
      ],
    },
    "method": "editReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "outcome:feedback:77",
              "emoji": {
                "name": "💬",
              },
              "label": "Feedback",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "outcome:bug:77",
              "emoji": {
                "name": "🐛",
              },
              "label": "Bug Report",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 3066993,
          "description": "📍 Town Square

🧭

\`\`\`
A quiet clearing under the oak.
\`\`\`

> 🛡️ **Work:** Keep the gate — Walk the rounds

💪 🎲 14 + 3 = **17**  vs  11  →  ✅ **SUCCESS**

You crest the ridge and chart the valley below.

+ 🗺️ Ridge Map
\`⚡ 9/10 (-1)  ┃  🎲 3 (-1)\`",
          "title": "🧭 Scout",
        },
      ],
    },
    "method": "webhook.editMessage",
  },
]
`;

exports[`dispatch oracle — slash arm > /sleep (non-admin goodnight) appends a Feedback button below the nav bar 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "🏕️ **The Warden's Oak**",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "The Oak's familiar boughs cradle you once more.",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "The day turns when the world wills it — not when you do.

*The ember glows. The Oak stands watch. Rest, for now.*",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "sleep:feedback",
              "emoji": {
                "name": "💬",
              },
              "label": "Feedback",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32768,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — slash arm > /stats renders the stats view with a nav bar and stamps last-played 1`] = `
[
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "content": "⚔️  **Aldric** — Warrior",
              "type": 10,
            },
            {
              "type": 14,
            },
            {
              "content": "**Upbringing:** Village  |  **Race:** Human
**Alignment:** lawful good
**Day Job:** Town Guard

**Stats:**
  💪 PHY  +3
  🧠 WIS  -1
  📖 INT  +0
  💬 CHA  +0

**Health:** 10/10  |  **Stamina:** 10/10
**Location:** The Warden's Oak
**Wealth:** 5 copper  |  **Rolls:** 3",
              "type": 10,
            },
          ],
          "type": 17,
        },
        {
          "components": [
            {
              "custom_id": "nav:hi",
              "emoji": {
                "name": "🌅",
              },
              "label": "Hi",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:journal",
              "emoji": {
                "name": "📖",
              },
              "label": "Journal",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:action",
              "emoji": {
                "name": "⚔️",
              },
              "label": "Action",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:look",
              "emoji": {
                "name": "👁️",
              },
              "label": "Look",
              "style": 2,
              "type": 2,
            },
            {
              "custom_id": "nav:backpack",
              "emoji": {
                "name": "🎒",
              },
              "label": "Backpack",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
        {
          "components": [
            {
              "custom_id": "nav:map",
              "emoji": {
                "name": "🗺️",
              },
              "label": "Map",
              "style": 2,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "flags": 32832,
    },
    "method": "reply",
  },
]
`;

exports[`dispatch oracle — slash arm > gated /stats with no character reroutes to the join wizard 1`] = `
[
  {
    "arg": {
      "flags": 64,
    },
    "method": "deferReply",
  },
  {
    "arg": {
      "components": [
        {
          "components": [
            {
              "custom_id": "join:name",
              "emoji": {
                "animated": false,
                "id": undefined,
                "name": "📝",
              },
              "label": "Enter Name",
              "style": 1,
              "type": 2,
            },
          ],
          "type": 1,
        },
      ],
      "embeds": [
        {
          "color": 14329120,
          "description": "📝 **Name** ◀
🛡️ Class
🌱 Upbringing
🧬 Race
⚖️ Alignment
🔧 Day Job
🎒 Starting Kit

__**Name**__
What shall the songs call you?",
          "footer": {
            "icon_url": undefined,
            "text": "Step 1 of 7 — 2-30 characters, no @ or #",
          },
          "thumbnail": {
            "url": "attachment://theoak.png",
          },
          "title": "⚔️  Forge Your Hero",
        },
      ],
      "files": [
        {
          "_attachment": "theoak.png",
        },
      ],
    },
    "method": "editReply",
  },
]
`;

exports[`dispatch oracle — slash arm > unknown command → ephemeral 'Unknown command' 1`] = `
[
  {
    "arg": {
      "content": "Unknown command \`/frobnicate\`. Try \`/help\`.",
      "flags": 64,
    },
    "method": "reply",
  },
]
`;
